@startuml
interface LocationProvider {
    +start(callback: LocationCallback)
    +stop()
}

interface LocationCallback {
    +onLocationChanged(newLocation: LatLng)
}

class VehicleLocationSimulator implements LocationProvider {
    -handler: Handler
    -initialPosition: LatLng
    +start(callback)
    +stop()
}

class VehicleTracker {
    -provider: LocationProvider
    -map: GoogleMap
    -carName: String
    -marker: Marker
    +startTracking()
    +stopTracking()
}

class MapTrackingViewModel {
    -tracker: VehicleTracker
    +startTracking(lat: double, lon: double, map: GoogleMap, carName: String)
    +stopTracking()
}


LocationCallback <|.. VehicleTracker
VehicleTracker --> LocationProvider
MapTrackingViewModel --> VehicleTracker
@enduml
